Thu Jan  9 14:24:40 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-parint.adb: Implementation of partition restarting. Add a new
	procedure Invalidate_Receiving_Stub used by the programmer to
	signal to GARLIC to invalidate RNS info on a given partition and
	to the client cache to invalidate the old value and to query a new
	one.

	* s-garhea.ads, s-garhea.adb: Add a callback fonction to notify a
 	partition error to System.RPC. Add a registration procedure to
	enable System.RPC to register its callback.

	* s-rpc.adb: Provide a callback to be notified of partition
	error. This procedure unblocks pending RPCs with the dead
	partition. Requests table contains the partition id used for the
	associated RPC.

Fri Dec 20 12:10:08 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-stratt.adb: Raise Data_Error if an integer cannot be mapped
	onto its equivalent XDR integer.

Thu Dec 19 12:54:45 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Added dummy functions for Shared_Passive (needed
	  for the stub expansion).

	* s-parint.adb: Idem.

	* s-gartcp.adb: Removed a conversion between Interfaces.C.int and
	  pointer types because of a possible clash on 64 bits machines.

Mon Dec 16 15:26:02 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-partyp.ads: Removed.

	* rci_info.ads: Removed (included in s-parint.ads).
	
	* rci_info.adb: Removed (included in s-parint.adb).

	* s-parint.ads: Inclusion of RCI_Info generic package.

	* s-parint.adb: Ditto.

	* Makefile.am: Removed rci_info.ad[bs] from file list.

Sat Nov 30 21:01:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garopt.adb: For sure, serial is not the default protocol.

Fri Nov 29 12:43:07 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garela.adb: Replaced by an empty package.

	* s-garter.adb: On the boot server, launch the termination task
	  only if this partition is not permanent. On other partitions,
	  reject global termination if the partition is permanent.
